--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -15,13 +15,58 @@
   font-weight: 700;
   font-style: normal;
 }*/
+:root {
+  --branding-color: #e8e2f8;
+  --secondary-color: #6c63ff;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
 
-h1 {
+body {
+  font-family: var(--default-font-family);
+}
+
+h1,
+h3,
+h4 {
   color: black;
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading-font-family);
   font-weight: bold;
 }
+
+h2,
 p {
-   font-family: "Poppins", sans-serif;
-  font-weight: normal; 
+  font-family: var(--default-font-family);
+  font-weight: normal;
+}
+
+.hero {
+  background-color: var(--branding-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: #272412;
+}
+
+.hero h1 {
+  font-size: 96px;
+}
+
+.hero h2 {
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 2;
+}
+
+.btn-branding {
+  background-color: var(--secondary-color);
+  color: white;
+  border-radius: 4;
+  padding: 15px 30px;
+  font-size: 18px;
 }
