--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,8 +16,8 @@
   font-style: normal;
 }*/
 :root {
-  --branding-color: #e8e2f8;
-  --secondary-color: #6c63ff;
+  --branding-color: #6c63ff ;
+  --secondary-color: #e8e2f8;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
@@ -27,6 +27,7 @@ body {
 }
 
 h1,
+h2,
 h3,
 h4 {
   color: black;
@@ -34,14 +35,18 @@ h4 {
   font-weight: bold;
 }
 
-h2,
 p {
-  font-family: var(--default-font-family);
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+}
+
+h2 {
+  font-size: 64px;
 }
 
 .hero {
-  background-color: var(--branding-color);
+  background-color: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
 }
@@ -58,15 +63,44 @@ p {
 }
 
 .hero h2 {
+  font-family: var(--default-font-family);
   font-size: 24px;
   font-weight: normal;
-  line-height: 2;
+  line-height: 1.5;
 }
 
 .btn-branding {
-  background-color: var(--secondary-color);
+  background-color: var(--branding-color);
   color: white;
-  border-radius: 4;
+  border-radius: 4px;
   padding: 15px 30px;
   font-size: 18px;
+  line-height: 27px;
+}
+
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  padding: 15px 30px;
+  font-size: 18px;
+  line-height: 27px;
+}
+.project-description {
+    padding: 120px 60px;
+}
+@media (max-width: 900px) {
+    h1 {
+        font-size: 44px;
+    }
+    h2 {
+        font-size: 44px;
+    }
+    .hero {
+        padding: 80px 20px;
+    }
+    .project-description {
+        padding: 0;
+        text-align: center;
+    }
 }
