--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,7 +16,7 @@
   font-style: normal;
 }*/
 :root {
-  --branding-color: #6c63ff ;
+  --branding-color: #6c63ff;
   --secondary-color: #e8e2f8;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
@@ -70,23 +70,33 @@ h2 {
   line-height: 1.5;
 }
 
-.content-container{
-    padding: 160px 20px;
+.content {
+  padding: 160px 20px;
 }
 
-.content-container h1 {
-    font-size: 64px;
-    line-height: 80px;
+.content h1 {
+  font-size: 64px;
+  line-height: 80px;
 }
 
-.content-container h2 {
-    font-size: 18px;
-    font-family: var(--default-font-family);
+.content h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
 
+.content h3 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+  line-height: 1.5;
+  margin: 20px 0;
+}
+
+.content-work-paragraph {
+    font-size: 14px;
 }
 
 .content {
-    margin: 30px;
+  margin: 30px;
 }
 
 .btn-branding {
@@ -107,25 +117,25 @@ h2 {
   line-height: 27px;
 }
 .project-description {
-    padding: 120px 60px;
+  padding: 120px 60px;
 }
 @media (max-width: 900px) {
-    h1 {
-        font-size: 44px;
-        line-height: 56px;
-    }
-    h2 {
-        font-size: 44px;
-    }
-    .hero {
-        padding: 80px 20px;
-    }
-    .project-description {
-        padding: 0;
-        text-align: center;
-    }
-    .content-container {
-        text-align: center;
-        padding: 0;
-    }
+  h1 {
+    font-size: 44px;
+    line-height: 56px;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  .content {
+    text-align: center;
+    padding: 0;
+  }
 }
