--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -45,6 +45,10 @@ h2 {
   font-size: 64px;
 }
 
+h4 {
+    font-size: 48px;
+}
+
 .hero {
   background-color: var(--secondary-color);
   text-align: center;
@@ -92,7 +96,7 @@ h2 {
 }
 
 .content-work-paragraph {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .content {
@@ -121,33 +125,76 @@ h2 {
 }
 
 .logo {
-    max-height: 40px;
+  max-height: 40px;
 }
 
 nav {
-    padding: 20px 0;
+  padding: 20px 0;
 }
 
 nav ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 nav li {
-    display: inline;
-    list-style: none;
-    line-height: 42px;
-    margin-left: 15px;
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
 }
 
 nav a {
-    text-decoration: none;
-    color: #272142;
-    transition: all 100ms ease-in-out;
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
 }
 
-nav a:hover, nav li.active a {
-    color: var(--branding-color);
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
+
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+    margin: 0;
+    font-size: 18px;
+}
+
+footer .email-link {
+  text-align: center;
+  text-decoration: none;
+  font-family: var(--heading-font-family);
+  font-size: 24px;
+  color: black;
+}
+
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  padding: 10px 15px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
 }
 
 @media (max-width: 900px) {
@@ -157,6 +204,12 @@ nav a:hover, nav li.active a {
   }
   h2 {
     font-size: 44px;
+  }
+  h4 {
+    font-size: 26px;
+  }
+  .btn {
+    font-size: 18px;
   }
   .hero {
     padding: 80px 20px;
